<resources>
    <string name="app_name">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="nickname">Nombre de usuario</string>
    <string name="mail">Correo electronico</string>

</resources>
